k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking
  labels:
    app: banking-app
    environment: base
